--- a/customer_dash/index.html
+++ b/customer_dash/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
   <head>
     <meta charset="UTF-8">
-    <title>Cheatsheet Concept</title>
+    <title>Distrito Max | Suscripción a notificaciones</title>
     <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel='stylesheet' href='https://unpkg.com/bulma@0.7.5/css/bulma.min.css'>
