Customer dashboard personalization

--- a/customer_dash/index.html
+++ b/customer_dash/index.html
@@ -48,7 +48,7 @@
     <section class="section">
       <div class="container">
         <div class="columns">
-          <div class="column is-3">
+          <!-- <div class="column is-3">
             <aside class="is-medium menu">
           <p class="menu-label">
             Colecciones
@@ -79,8 +79,8 @@
                 <li><span class="tag is-white is-medium">Medium</span></li>
               </ul>
             </aside>
-          </div>
-          <div class="column is-9">
+          </div> -->
+          <div class="column is-12">
             <div class="content">
           <h3 class="title is-3">Recordatorios</h3>
           <div class="columns is-multiline">
@@ -88,23 +88,23 @@
               <div class="box">
                 <h4 id="const" class="title">Elije alguna de las opciones</h4>
                 <div class="field">
-                  <p class="has-text-weight-bold">Colecciones</p>
-                  <input class="is-checkradio" id="exampleRadioInline1" type="radio" name="exampleRadioInline" checked="checked">
-                  <label for="exampleRadioInline1">Option 1</label>
-                  <input class="is-checkradio" id="exampleRadioInline2" type="radio" name="exampleRadioInline">
-                  <label for="exampleRadioInline2">Option 2</label>
-                  <input class="is-checkradio" id="exampleRadioInline3" type="radio" name="exampleRadioInline">
-                  <label for="exampleRadioInline3">Option 2</label>
+                  <p class="has-text-weight-bold">Opciones de envío de correo</p>
+                  <input class="is-checkradio" id="exampleRadioInline1" type="checkbox" name="exampleRadioInline" checked="checked">
+                  <label for="exampleRadioInline1">Colecciones Nuevas</label>
+                  <input class="is-checkradio" id="exampleRadioInline2" type="checkbox" name="exampleRadioInline">
+                  <label for="exampleRadioInline2">Productos Nuevos</label>
+                  <input class="is-checkradio" id="exampleRadioInline3" type="checkbox" name="exampleRadioInline">
+                  <label for="exampleRadioInline3">Bajo el precio</label>
                   </div>
                   <div class="field">
-                  <input class="is-checkradio" id="exampleRadioInlie1" type="radio" name="exampleRadioInline" checked="checked">
-                  <label for="exampleRadioInlie1">Option 1</label>
-                  <input class="is-checkradio" id="exampleRadioInlie2" type="radio" name="exampleRadioInline">
-                  <label for="exampleRadioInlie2">Option 2</label>
-                  <input class="is-checkradio" id="exampleRadioInlie3" type="radio" name="exampleRadioInline">
-                  <label for="exampleRadioInlie3">Option 2</label>
+                  <input class="is-checkradio" id="exampleRadioInlie1" type="checkbox" name="exampleRadioInline" checked="checked">
+                  <label for="exampleRadioInlie1">En Stock</label>
+                  <input class="is-checkradio" id="exampleRadioInlie2" type="checkbox" name="exampleRadioInline">
+                  <label for="exampleRadioInlie2">Ya no hay Stock</label>
+                  <input class="is-checkradio" id="exampleRadioInlie3" type="checkbox" name="exampleRadioInline">
+                  <label for="exampleRadioInlie3">Promociones</label>
                 </div>
-                <div class="field" style="padding-top:1em">
+                <!-- <div class="field" style="padding-top:1em">
                   <p class="has-text-weight-bold">Productos</p>
                   <input class="is-checkradio is-" id="exampleRadioInline4" type="radio" name="exampleRadioInline" checked="checked">
                   <label for="exampleRadioInline4">Option 1</label>
@@ -112,7 +112,7 @@
                   <label for="exampleRadioInline5">Option 2</label>
                   <input class="is-checkradio" id="exampleRadioInline6" type="radio" name="exampleRadioInline">
                   <label for="exampleRadioInline6">Option 2</label>
-                </div>
+                </div> -->
               <!--pre><code class="language-javascript">const test = 'test';</code></pre-->
             </div>
             </div>
@@ -124,9 +124,11 @@
                   <input class="is-checkradio" id="exampleRadioInlin1" type="radio" name="exampleRadioInlin" checked="checked">
                   <label for="exampleRadioInlin1">Diario</label>
                   <input class="is-checkradio" id="exampleRadioInlin2" type="radio" name="exampleRadioInlin">
-                  <label for="exampleRadioInlin2">Semana</label>
+                  <label for="exampleRadioInlin2">Semanal</label>
                   <input class="is-checkradio" id="exampleRadioInlin3" type="radio" name="exampleRadioInlin">
-                  <label for="exampleRadioInlin3">Quincena</label>
+                  <label for="exampleRadioInlin3">Quincenal</label>
+                  <input class="is-checkradio" id="exampleRadioInlin3" type="radio" name="exampleRadioInlin">
+                  <label for="exampleRadioInlin3">Mensual</label>
                 </div>
               <!--pre><code class="language-javascript">const test = 'test';</code></pre-->
             </div>
