More and better options

--- a/customer_dash/index.html
+++ b/customer_dash/index.html
@@ -98,9 +98,9 @@
                   </div>
                   <div class="field">
                   <input class="is-checkradio" id="exampleRadioInlie1" type="checkbox" name="exampleRadioInline" checked="checked">
-                  <label for="exampleRadioInlie1">En Stock</label>
-                  <input class="is-checkradio" id="exampleRadioInlie2" type="checkbox" name="exampleRadioInline">
-                  <label for="exampleRadioInlie2">Ya no hay Stock</label>
+                  <label for="exampleRadioInlie1">Entrega inmediata</label>
+                  <!-- <input class="is-checkradio" id="exampleRadioInlie2" type="checkbox" name="exampleRadioInline">
+                  <label for="exampleRadioInlie2">Ya no hay Stock</label> -->
                   <input class="is-checkradio" id="exampleRadioInlie3" type="checkbox" name="exampleRadioInline">
                   <label for="exampleRadioInlie3">Promociones</label>
                 </div>
